# gpuq

./: .gitignore  README.md  pyproject.toml
docs/: HUB_SETUP.md  WORKER_SETUP.md
gpuq/: cli.py  config.py  daemon.py  jobs.py  launch.py  paths.py  workers.py
packaging/: gpuq-daemon.service
tests/: conftest.py  test_config.py  test_gpu_availability.py  test_integration.py  test_jobs.py  test_launch_script.py
tools/: setup-worker-mount.sh
