[project]
name = "gpuq"
version = "0.1.0"
description = "Submit PyTorch training jobs to a small pool of GPU servers over SSH"
requires-python = ">=3.11"
authors = [{ name = "gpuq" }]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
gpuq = "gpuq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpuq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
